# STUDYBUD

./: Dockerfile  apiexample.html  db.sqlite3  docker-compose.yml  pyproject.toml
base/: forms.py  models.py  urls.py  views.py
base/api/: serializers.py  views.py
base/migrations/: 0001_initial.py  0002_user_bio_user_name_alter_user_email.py  0003_alter_room_name.py  0004_user_avatar.py  0005_room_favourite.py  0006_alter_room_favourite.py
base/templates/base/: activity.html  activity_component.html  delete_old.html  favourite_list.html  feed_component.html  home.html  home_old.html  login_register.html  login_register_old.html  profile.html  profile_old.html  room.html  room_form.html  room_form_old.html  topic_component.html  topics.html  update-user.html
static/styles/: style.css
studybud/: settings.py  urls.py
templates/: main.html  navbar.html
