[tool.poetry]
name = "studybud"
version = "0.1"
description = "Its studyproject"
authors = ["Vanchez98 <iom.boghean@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
jwt = "^1.3.1"
Token = "^1.8.6"
drf-yasg = "^1.21.3"
simplejwt = "^2.0.1"
docker-compose = "^1.29.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
